Fixed the screen clearing problem for Windows